# goodform

./: CMakeLists.txt  README.md  msgpack.org.md  requirements.txt
include/: form.hpp  json.hpp  msgpack.hpp  portable_endian.hpp  variant.hpp
include/goodform/: form.hpp  json.hpp  msgpack.hpp  variant.hpp
src/: form.cpp  json.cpp  msgpack.cpp  test.cpp  variant.cpp
tests/: include_form.cpp  variant-test.cpp
